--- a/bejeweled/code/index.html
+++ b/bejeweled/code/index.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="../p5.min.js"></script>
-    <script src="../addons/p5.dom.min.js"></script>
-    <script src="../addons/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
-    <style>
-      body{
-        max-width: 1000px;
-      }
-      video {
-        margin-top: -602.5px;
-        margin-bottom: 500px;
-        margin-left: 251px;
-        border-radius: 2%;
-        height: 497px;
-        width: 497px;
-        object-fit: fill;
-      }
-    </style>
-  </head>
-  <body onload="setup()">
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>p5.js example</title>
+  <style> body {padding: 0; margin: 0;} </style>
+  <script src="../p5.min.js"></script>
+  <script src="../addons/p5.dom.min.js"></script>
+  <script src="../addons/p5.sound.min.js"></script>
+  <script src="sketch.js"></script>
+  <style>
+    body{
+      max-width: 1000px;
+    }
+    video {
+      margin-top: -603.5px;
+      margin-bottom: 500px;
+      margin-left: 250px;
+      border-radius: 0.5%;
+      height: 499px;
+      width: 499px;
+      object-fit: fill;
+    }
+    .thanos1 {
+      position: fixed;
+      top: 49%;
+      left: 42.5%;
+      margin-left: -100px;
+      margin-top: -93px;
+    }
+    .thanos2 {
+      position: fixed;
+      top: 49%;
+      left: 3%;
+      margin-left: -100px;
+      margin-top: -93px;
+    }
+
+  </style>
+</head>
+<body onload="setup()">
+<audio id="audio" src="sounds/1.mp3" autoplay="autoplay"> </audio>
+</body>
 </html>
